# ChangeLog for sys-apps/openrc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.61 2009/01/31 14:34:36 zzam Exp $

*openrc-0.5.0 (14 Jul 2009)

  14 Jul 2009; Daniel Robbins <drobbins@funtoo.org> +openrc-0.5.0.ebuild: New
  ebuild that contains 0.5.0 plus some upstream fixes and funtoo minimal net.lo
  initscript additions. Currently masked in package.mask for testing.

  13 Mar 2009; Daniel Robbins <drobbins@funtoo.org> openrc-0.4.2.ebuild,
  openrc-0.4.2-r1.ebuild: bumping to stable for stable funtoo.

*openrc-0.4.2-r1 (04 Mar 2009)

  04 Mar 2009; Daniel Robbins <drobbins@funtoo.org> +openrc-0.4.2-r1.ebuild:
  /etc/init.d/net.eth0 courtesy symlink added.

*openrc-0.4.2 (01 Feb 2009)

  01 Feb 2009; Daniel Robbins <drobbins@funtoo.org> +openrc-0.4.2.ebuild:
  using Funtoo ebuild for OpenRC 0.4.2 release, also removed old versions
  and 9999 version of OpenRC from the tree.

  08 Jan 2009; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Improve description after private conversation with Roy.

  05 Jan 2009; Daniel Robbins <drobbins@funtoo.org> openrc-0.4.1.ebuild:
  removing module-init-tools dep as per Doug Goldstein's changes upstream.

*openrc-0.4.1 (29 Dec 2008)

  29 Dec 2008; Daniel Robbins <drobbins@funtoo.org> +openrc-0.4.1.ebuild:
  new OpenRC release. Updated ebuild to preserve existing
  /etc/init.d/net.* initscripts rather than moving them out of the way
  so that they get replaced by a symlink. On my box, I use physical files
  for things like net.br0, the setting up of my bridge. And I think it's
  best to allow users to replace the default net scripts with their own
  custom scripts. Also now create an /etc/conf.d/net.example symlink so
  users have an easy reference when configuring their machine.

  15 Dec 2009; Daniel Robbins <drobbins@funtoo.org> openrc-0.4.0.ebuild:
  Fixes for ensuring runlevels get populated correctly.
