@@ -1,0 +1,22 @@
+ncurses? ( sys-libs/ncurses ) eclibc_glibc? ( >=sys-libs/glibc-2.5 ) pam? ( virtual/pam ) virtual/os-headers
+kernel_linux? ( =sys-apps/sysvinit-2.86-r11 ) kernel_FreeBSD? ( virtual/init sys-process/fuser-bsd ) elibc_glibc? ( >=sys-libs/glibc-2.5 ) ncurses? ( sys-libs/ncurses ) pam? ( virtual/pam ) >=sys-apps/baselayout-2.0.0 >=sys-fs/udev-135
+0
+http://www.funtoo.org/archive/openrc/openrc-funtoo-2009.07.24.tar.bz2
+
+http://roy.marples.name/openrc
+BSD-2
+OpenRC manages the services, startup and shutdown of a host
+alpha amd64 arm hppa ia64 m68k mips ppc ppc64 s390 sh sparc sparc-fbsd x86 x86-fbsd
+eutils flag-o-matic multilib portability toolchain-funcs
+debug ncurses pam unicode kernel_linux kernel_FreeBSD
+
+
+virtual/baselayout
+
+
+compile install postinst preinst setup
+
+
+
+
+
