@@ -2,9 +2,11 @@ AUX inittab-openrc.patch 760 RMD160 0516f377865e0c4e8f36ee3ea9dac453ebadf592 SHA
 DIST openrc-0.4.1.tar.bz2 144429 RMD160 86510cb298eaa8f5f8cef4569e4df903650935de SHA1 1e56096b02a91ae7f455765f3334dfa8cc887f97 SHA256 0b6de456b1f5398089f8d4f805dcee427dced4d6245dfe1427b1994c2d2fa16b
 DIST openrc-0.4.2.tar.bz2 144825 RMD160 68f559ddb41f5fcc367298f258b43bf667af45c3 SHA1 da75f8a9d81639fa7e5de5b398c3b807190be520 SHA256 df6463ba76b3700d803b3fe81c9cd6d511142225ada7ff655cb71b91ca1bf8af
 DIST openrc-funtoo-2009.07.15.tar.bz2 147611 RMD160 622eaf5ab953cddaf0ff3ac2d38e24cf4c6c8a5d SHA1 da0ce0bc048832afc50bb9aa633e3a61206b0caa SHA256 8a6e78cd69518e85d00ed533b211155a1250717a2adf49195ef6717fbe572bc8
+DIST openrc-funtoo-2009.07.24.tar.bz2 147708 RMD160 9bce5b4535a34847afa663d2ba78d3f8df23f1e2 SHA1 d50e63abfd0268b2cb46e480c83e878e0bcaf700 SHA256 04c791fbd8e65d76c62df7538fbd8002a2fddba3fa963b448d3ae273fd0ee744
 EBUILD openrc-0.4.1.ebuild 9383 RMD160 13728bd4e41162c4a53261cb16dd33eaf40081f2 SHA1 04d0c1414f4f2aedc4ddceee8519ecb7b192502f SHA256 c942d25a39e14e11c48bad2a737d5ad29dd24104bb79800fb09b0699c7e22687
 EBUILD openrc-0.4.2-r1.ebuild 9440 RMD160 2c0d06d53ee1f17a97afae7a6f419ed7119d9f74 SHA1 4dff3d79d018042126bb6ffed5cbdf5a7779169c SHA256 dd90ec1aff17e2d0ee2710d538a23ae7644d5527ef543e6de64e857b29b0aa4a
 EBUILD openrc-0.4.2.ebuild 9368 RMD160 4632e4db37f3d91d7cd32a774e57639043fd2bf0 SHA1 97e7435d403c87715f1c5c659c30e4f387f068f0 SHA256 d9c1eff57135524c59a9301c219c4e0b940996049ae4ac2aa987452a17886610
+EBUILD openrc-0.5.0-r1.ebuild 9350 RMD160 eebce8b35e315bc9a33d0effd7922d21ceac0ea9 SHA1 8397bce6a902dbd27ed3c14dcc34f1af54f570b2 SHA256 86f9a29c85223bf03729621441c58084960dc0d21279a95d5ad47283a1e8212d
 EBUILD openrc-0.5.0.ebuild 9345 RMD160 dae78b22a0103102434d5fd41e31ed02a70194a4 SHA1 dbdc8df8dc320461f0383e8add2bf1867a359143 SHA256 2d51ca139079a0163e0704a2ad860fcc297a214cb52a1b5194573b0b84712483
-MISC ChangeLog 11575 RMD160 6389995623441db9ccf87f61a601b576d9edae6a SHA1 1b24c328b612eadba9d9199d1c54d5bffb7c85b3 SHA256 128136a72d8537a548433a221730de933a8c599312d518b5a699cbf0aecbe749
+MISC ChangeLog 11720 RMD160 f0206860a6cf5c48ca8d2a679688a9716f1d0989 SHA1 1b6e397ac29bce262b2fa714a081df1fff09f4ff SHA256 3200199a6e842b4eb2d074a7a243907e23542e8fabf7ca81444be57dd2583d95
 MISC metadata.xml 314 RMD160 ff92ab9cd3f1f3caf25d0be59cf658343d44991c SHA1 d9febb1ce1499c949a2478defda945a3ce716f73 SHA256 4eb82a61b3697027b5ccb1a328a763308c7e090aa23f69fe87b7b7966165fb33
