@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.61 2009/01/31 14:34:36 zzam Exp $
 
+*openrc-0.5.0-r1 (31 Jul 2009)
+
+  31 Jul 2009; Daniel Robbins <drobbins@funtoo.org> +openrc-0.5.0-r1.ebuild:
+  New upstream snapshot of openrc.
+
 *openrc-0.5.0 (14 Jul 2009)
 
   14 Jul 2009; Daniel Robbins <drobbins@funtoo.org> +openrc-0.5.0.ebuild: New
